Bindings/Cxx/Panshilar.hpp

    using namespace Intrinsics;
    enum class Platform : u8 
    {
        Unknown = 0,
        Windows = 1,
        Linux = 2,
        OSX = 3,
        Android = 4,
        iOS = 5,
        PS5 = 6,
        XBoxSeries = 7,
        Switch = 8,
    };
    enum class Architecture : u8 
    {
        Unknown = 0,
        X64 = 1,
        ARM64 = 2,
    };
    Platform GetPlatform();
    Architecture GetArchitecture();
    struct SourceCodeLocation
    {
       utf8str file;
       i32 line;
       i32 column;
       utf8str function;
    };
    Mutex CreateMutex();
    void DestroyMutex(
        Mutex* mutex
    );
    void LockMutex(
        Mutex* mutex
    );
    void UnlockMutex(
        Mutex* mutex
    );
    b8 TryLockMutex(
        Mutex* mutex
    );
    RWMutex CreateRWMutex();
    void DestroyRWMutex(
        RWMutex* rwmutex
    );
    void LockRWMutexShared(
        RWMutex* rwmutex
    );
    void LockRWMutexExclusive(
        RWMutex* rwmutex
    );
    void UnlockRWMutexShared(
        RWMutex* rwmutex
    );
    void UnlockRWMutexExclusive(
        RWMutex* rwmutex
    );
    b8 TryLockRWMutexShared(
        RWMutex* rwmutex
    );
    b8 TryLockRWMutexExclusive(
        RWMutex* rwmutex
    );
    Semaphore CreateSemaphore(
        i32 initialCount
    );
    void DestroySemaphore(
        Semaphore* semaphore
    );
    void WaitSemaphore(
        Semaphore* semaphore
    );
    b8 WaitSemaphoreTimeout(
        Semaphore* semaphore,
        i32 timeoutNs
    );
    void SignalSemaphore(
        Semaphore* semaphore,
        i32 count
    );
    ConditionVariable CreateConditionVariable();
    void DestroyConditionVariable(
        ConditionVariable* condvar
    );
    void WaitConditionVariable(
        ConditionVariable* condvar,
        Mutex* mutex
    );
    b8 WaitConditionVariableTimeout(
        ConditionVariable* condvar,
        Mutex* mutex,
        i32 timeoutNs
    );
    void SignalConditionVariable(
        ConditionVariable* condvar
    );
    void BroadcastConditionVariable(
        ConditionVariable* condvar
    );
    void MemSet(
        rawptr memory,
        i32 value,
        i32 size
    );
    void MemCopy(
        rawptr destination,
        rawptr source,
        i32 size
    );
    void MemMove(
        rawptr destination,
        rawptr source,
        i32 size
    );
    enum class AllocatorMode : u8 
    {
        Allocate = 0,
        Resize = 1,
        Free = 2,
        FreeAll = 3,
        AllocateNoZero = 4,
        ResizeNoZero = 5,
        QueryCapabilities = 255,
    };
    enum class AllocatorCapability : u64 
    {
        None = 0,
        ThreadSafe = 1,
        Resize = 2,
        Free = 4,
        FreeAll = 8,
        HintNil = 67108864,
        HintBump = 134217728,
        HintHeap = 268435456,
        HintTemp = 536870912,
        HintDebug = 1073741824,
    };
    enum class AllocatorError : u8 
    {
        None = 0,
        OutOfMemory = 1,
        InvalidAlignment = 2,
        InvalidSize = 3,
        InvalidMode = 4,
        Internal = 5,
        OutOfOrderFree = 6,
        DoubleFree = 7,
        CantFreeAll = 8,
    };
    typedef rawptr (*AllocatorProcedure)(
        rawptr allocatorData,
        AllocatorMode mode,
        i32 size,
        i32 alignment,
        rawptr oldMemory,
        i32 oldSize,
        SourceCodeLocation location,
        AllocatorError* error
    );
    struct Allocator
    {
       AllocatorProcedure procedure;
       rawptr data;
    };
    rawptr Allocate(
        Allocator allocator,
        b8 zeroed,
        i32 size,
        i32 alignment,
        SourceCodeLocation location,
        AllocatorError* error
    );
    rawptr Resize(
        Allocator allocator,
        b8 zeroed,
        rawptr oldMemory,
        i32 oldSize,
        i32 newSize,
        i32 alignment,
        SourceCodeLocation location,
        AllocatorError* error
    );
    rawptr DefaultResize(
        Allocator allocator,
        b8 zeroed,
        rawptr oldMemory,
        i32 oldSize,
        i32 newSize,
        i32 alignment,
        SourceCodeLocation location,
        AllocatorError* error
    );
    void Free(
        Allocator allocator,
        rawptr memory,
        SourceCodeLocation location,
        AllocatorError* error
    );
    void FreeAll(
        Allocator allocator,
        SourceCodeLocation location,
        AllocatorError* error
    );
    u64 QueryAllocatorCapabilities(
        Allocator allocator,
        SourceCodeLocation location,
        AllocatorError* error
    );
    enum class ArenaSnapshotError : u8 
    {
        None = 0,
        InvalidData = 1,
        MemoryBlockNotOwned = 2,
        OutOfOrderRestoreUsage = 3,
        DoubleRestoreOrDiscardUsage = 4,
    };
Panshilar::Platform Panshilar::GetPlatform()
{
    PNSLR_Platform zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_GetPlatform(); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
Panshilar::Architecture Panshilar::GetArchitecture()
{
    PNSLR_Architecture zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_GetArchitecture(); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
struct PNSLR_SourceCodeLocation
{
   PNSLR_UTF8STR file;
   i32 line;
   i32 column;
   PNSLR_UTF8STR function;
};
Panshilar::Mutex Panshilar::CreateMutex()
{
    PNSLR_Mutex zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_CreateMutex(); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
void Panshilar::DestroyMutex(Panshilar::Mutex* mutex)
{
    PNSLR_DestroyMutex(PNSLR_Bindings_Convert(mutex));
}
void Panshilar::LockMutex(Panshilar::Mutex* mutex)
{
    PNSLR_LockMutex(PNSLR_Bindings_Convert(mutex));
}
void Panshilar::UnlockMutex(Panshilar::Mutex* mutex)
{
    PNSLR_UnlockMutex(PNSLR_Bindings_Convert(mutex));
}
b8 Panshilar::TryLockMutex(Panshilar::Mutex* mutex)
{
    b8 zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_TryLockMutex(PNSLR_Bindings_Convert(mutex)); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
Panshilar::RWMutex Panshilar::CreateRWMutex()
{
    PNSLR_RWMutex zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_CreateRWMutex(); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
void Panshilar::DestroyRWMutex(Panshilar::RWMutex* rwmutex)
{
    PNSLR_DestroyRWMutex(PNSLR_Bindings_Convert(rwmutex));
}
void Panshilar::LockRWMutexShared(Panshilar::RWMutex* rwmutex)
{
    PNSLR_LockRWMutexShared(PNSLR_Bindings_Convert(rwmutex));
}
void Panshilar::LockRWMutexExclusive(Panshilar::RWMutex* rwmutex)
{
    PNSLR_LockRWMutexExclusive(PNSLR_Bindings_Convert(rwmutex));
}
void Panshilar::UnlockRWMutexShared(Panshilar::RWMutex* rwmutex)
{
    PNSLR_UnlockRWMutexShared(PNSLR_Bindings_Convert(rwmutex));
}
void Panshilar::UnlockRWMutexExclusive(Panshilar::RWMutex* rwmutex)
{
    PNSLR_UnlockRWMutexExclusive(PNSLR_Bindings_Convert(rwmutex));
}
b8 Panshilar::TryLockRWMutexShared(Panshilar::RWMutex* rwmutex)
{
    b8 zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_TryLockRWMutexShared(PNSLR_Bindings_Convert(rwmutex)); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
b8 Panshilar::TryLockRWMutexExclusive(Panshilar::RWMutex* rwmutex)
{
    b8 zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_TryLockRWMutexExclusive(PNSLR_Bindings_Convert(rwmutex)); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
Panshilar::Semaphore Panshilar::CreateSemaphore(i32 initialCount)
{
    PNSLR_Semaphore zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_CreateSemaphore(PNSLR_Bindings_Convert(initialCount)); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
void Panshilar::DestroySemaphore(Panshilar::Semaphore* semaphore)
{
    PNSLR_DestroySemaphore(PNSLR_Bindings_Convert(semaphore));
}
void Panshilar::WaitSemaphore(Panshilar::Semaphore* semaphore)
{
    PNSLR_WaitSemaphore(PNSLR_Bindings_Convert(semaphore));
}
b8 Panshilar::WaitSemaphoreTimeout(Panshilar::Semaphore* semaphore, i32 timeoutNs)
{
    b8 zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_WaitSemaphoreTimeout(PNSLR_Bindings_Convert(semaphore), PNSLR_Bindings_Convert(timeoutNs)); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
void Panshilar::SignalSemaphore(Panshilar::Semaphore* semaphore, i32 count)
{
    PNSLR_SignalSemaphore(PNSLR_Bindings_Convert(semaphore), PNSLR_Bindings_Convert(count));
}
Panshilar::ConditionVariable Panshilar::CreateConditionVariable()
{
    PNSLR_ConditionVariable zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_CreateConditionVariable(); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
void Panshilar::DestroyConditionVariable(Panshilar::ConditionVariable* condvar)
{
    PNSLR_DestroyConditionVariable(PNSLR_Bindings_Convert(condvar));
}
void Panshilar::WaitConditionVariable(Panshilar::ConditionVariable* condvar, Panshilar::Mutex* mutex)
{
    PNSLR_WaitConditionVariable(PNSLR_Bindings_Convert(condvar), PNSLR_Bindings_Convert(mutex));
}
b8 Panshilar::WaitConditionVariableTimeout(Panshilar::ConditionVariable* condvar, Panshilar::Mutex* mutex, i32 timeoutNs)
{
    b8 zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_WaitConditionVariableTimeout(PNSLR_Bindings_Convert(condvar), PNSLR_Bindings_Convert(mutex), PNSLR_Bindings_Convert(timeoutNs)); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
void Panshilar::SignalConditionVariable(Panshilar::ConditionVariable* condvar)
{
    PNSLR_SignalConditionVariable(PNSLR_Bindings_Convert(condvar));
}
void Panshilar::BroadcastConditionVariable(Panshilar::ConditionVariable* condvar)
{
    PNSLR_BroadcastConditionVariable(PNSLR_Bindings_Convert(condvar));
}
void Panshilar::MemSet(rawptr memory, i32 value, i32 size)
{
    PNSLR_MemSet(PNSLR_Bindings_Convert(memory), PNSLR_Bindings_Convert(value), PNSLR_Bindings_Convert(size));
}
void Panshilar::MemCopy(rawptr destination, rawptr source, i32 size)
{
    PNSLR_MemCopy(PNSLR_Bindings_Convert(destination), PNSLR_Bindings_Convert(source), PNSLR_Bindings_Convert(size));
}
void Panshilar::MemMove(rawptr destination, rawptr source, i32 size)
{
    PNSLR_MemMove(PNSLR_Bindings_Convert(destination), PNSLR_Bindings_Convert(source), PNSLR_Bindings_Convert(size));
}
extern "C" typedef rawptr (*PNSLR_AllocatorProcedure)(rawptr allocatorData, PNSLR_AllocatorMode mode, i32 size, i32 alignment, rawptr oldMemory, i32 oldSize, PNSLR_SourceCodeLocation location, PNSLR_AllocatorError* error);
rawptr Panshilar::Allocate(Panshilar::Allocator allocator, b8 zeroed, i32 size, i32 alignment, Panshilar::SourceCodeLocation location, Panshilar::AllocatorError* error)
{
    rawptr zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_Allocate(PNSLR_Bindings_Convert(allocator), PNSLR_Bindings_Convert(zeroed), PNSLR_Bindings_Convert(size), PNSLR_Bindings_Convert(alignment), PNSLR_Bindings_Convert(location), PNSLR_Bindings_Convert(error)); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
rawptr Panshilar::Resize(Panshilar::Allocator allocator, b8 zeroed, rawptr oldMemory, i32 oldSize, i32 newSize, i32 alignment, Panshilar::SourceCodeLocation location, Panshilar::AllocatorError* error)
{
    rawptr zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_Resize(PNSLR_Bindings_Convert(allocator), PNSLR_Bindings_Convert(zeroed), PNSLR_Bindings_Convert(oldMemory), PNSLR_Bindings_Convert(oldSize), PNSLR_Bindings_Convert(newSize), PNSLR_Bindings_Convert(alignment), PNSLR_Bindings_Convert(location), PNSLR_Bindings_Convert(error)); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
rawptr Panshilar::DefaultResize(Panshilar::Allocator allocator, b8 zeroed, rawptr oldMemory, i32 oldSize, i32 newSize, i32 alignment, Panshilar::SourceCodeLocation location, Panshilar::AllocatorError* error)
{
    rawptr zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_DefaultResize(PNSLR_Bindings_Convert(allocator), PNSLR_Bindings_Convert(zeroed), PNSLR_Bindings_Convert(oldMemory), PNSLR_Bindings_Convert(oldSize), PNSLR_Bindings_Convert(newSize), PNSLR_Bindings_Convert(alignment), PNSLR_Bindings_Convert(location), PNSLR_Bindings_Convert(error)); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
void Panshilar::Free(Panshilar::Allocator allocator, rawptr memory, Panshilar::SourceCodeLocation location, Panshilar::AllocatorError* error)
{
    PNSLR_Free(PNSLR_Bindings_Convert(allocator), PNSLR_Bindings_Convert(memory), PNSLR_Bindings_Convert(location), PNSLR_Bindings_Convert(error));
}
void Panshilar::FreeAll(Panshilar::Allocator allocator, Panshilar::SourceCodeLocation location, Panshilar::AllocatorError* error)
{
    PNSLR_FreeAll(PNSLR_Bindings_Convert(allocator), PNSLR_Bindings_Convert(location), PNSLR_Bindings_Convert(error));
}
u64 Panshilar::QueryAllocatorCapabilities(Panshilar::Allocator allocator, Panshilar::SourceCodeLocation location, Panshilar::AllocatorError* error)
{
    u64 zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW = PNSLR_QueryAllocatorCapabilities(PNSLR_Bindings_Convert(allocator), PNSLR_Bindings_Convert(location), PNSLR_Bindings_Convert(error)); return PNSLR_Bindings_Convert(zzzz_RetValXYZABCDEFGHIJKLMNOPQRSTUVW);
}
struct PNSLR_Path
{
   PNSLR_UTF8STR path;
};
extern "C" typedef b8 (*PNSLR_DirectoryIterationVisitorDelegate)(rawptr payload, PNSLR_Path path, b8 isDirectory, b8* exploreCurrentDirectory);