Bindings/Odin/Panshilar/Panshilar.odin

package Panshilar

import "../Intrinsics"

// #######################################################################################
// Environment
// #######################################################################################

/**
 * Defines the platforms supported by the library.
 */
Platform :: enum u8 {
	Unknown = 0,
	Windows = 1,
	Linux = 2,
	OSX = 3,
	Android = 4,
	iOS = 5,
	PS5 = 6,
	XBoxSeries = 7,
	Switch = 8,
}

/**
 * Defines the architectures supported by the library.
 */
Architecture :: enum u8 {
	Unknown = 0,
	X64 = 1,
	ARM64 = 2,
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Get the current platform.
     */
	GetPlatform :: proc "c" () -> Platform ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Get the current architecture.
     */
	GetArchitecture :: proc "c" () -> Architecture ---
}

// #######################################################################################
// Runtime
// #######################################################################################

/**
 * Defines the source code location for debugging purposes.
 */
SourceCodeLocation :: struct  {
	file: string,
	line: i32,
	column: i32,
	function: string,
}

// #######################################################################################
// Sync
// #######################################################################################

// Mutex ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

/**
 * The most basic synchronization primitive.
 */
Mutex :: struct #align(8)  {
	buffer: [64]u8,
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Creates a mutex.
     */
	CreateMutex :: proc "c" () -> Mutex ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Destroys a mutex.
     */
	DestroyMutex :: proc "c" (
		mutex: ^Mutex,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Locks a mutex.
     */
	LockMutex :: proc "c" (
		mutex: ^Mutex,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Unlocks a mutex.
     */
	UnlockMutex :: proc "c" (
		mutex: ^Mutex,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Tries to lock a mutex.
     * Returns true if the mutex was successfully locked, false otherwise.
     */
	TryLockMutex :: proc "c" (
		mutex: ^Mutex,
	) -> b8 ---
}

// Read-Write ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

/**
 * A read-write mutex.
 * This is a synchronization primitive that allows multiple readers or a single writer.
 * It is useful for scenarios where reads are more frequent than writes.
 */
RWMutex :: struct #align(8)  {
	buffer: [200]u8,
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Creates a read-write mutex.
     */
	CreateRWMutex :: proc "c" () -> RWMutex ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Destroys a read-write mutex.
     */
	DestroyRWMutex :: proc "c" (
		rwmutex: ^RWMutex,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Locks a read-write mutex for reading.
     * Multiple threads can read simultaneously.
     */
	LockRWMutexShared :: proc "c" (
		rwmutex: ^RWMutex,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Locks a read-write mutex for writing.
     * Only one thread can write at a time, and no other threads can read while writing.
     */
	LockRWMutexExclusive :: proc "c" (
		rwmutex: ^RWMutex,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Unlocks a read-write mutex after reading.
     * Allows other threads to read or write.
     */
	UnlockRWMutexShared :: proc "c" (
		rwmutex: ^RWMutex,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Unlocks a read-write mutex after writing.
     * Allows other threads to read or write.
     */
	UnlockRWMutexExclusive :: proc "c" (
		rwmutex: ^RWMutex,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Tries to lock a read-write mutex for reading.
     * Returns true if the mutex was successfully locked for reading, false otherwise.
     */
	TryLockRWMutexShared :: proc "c" (
		rwmutex: ^RWMutex,
	) -> b8 ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Tries to lock a read-write mutex for writing.
     * Returns true if the mutex was successfully locked for writing, false otherwise.
     */
	TryLockRWMutexExclusive :: proc "c" (
		rwmutex: ^RWMutex,
	) -> b8 ---
}

// Semaphore ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

/**
 * A semaphore synchronization primitive.
 * It allows a certain number of threads to access a resource concurrently.
 */
Semaphore :: struct #align(8)  {
	buffer: [32]u8,
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Creates a semaphore.
     * The initial count specifies how many threads can access the resource concurrently.
     */
	CreateSemaphore :: proc "c" (
		initialCount: i32,
	) -> Semaphore ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Destroys a semaphore.
     */
	DestroySemaphore :: proc "c" (
		semaphore: ^Semaphore,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Waits on a semaphore.
     * The calling thread will block until the semaphore count is greater than zero.
     */
	WaitSemaphore :: proc "c" (
		semaphore: ^Semaphore,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Waits on a semaphore with a timeout.
     * The calling thread will block until the semaphore count is greater than zero or the timeout expires.
     * Returns true if the semaphore was acquired, false if the timeout expired.
     */
	WaitSemaphoreTimeout :: proc "c" (
		semaphore: ^Semaphore,
		timeoutNs: i32,
	) -> b8 ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Signals a semaphore, incrementing its count by a specified amount.
     * If the count was zero, this will wake up one or more waiting threads.
     */
	SignalSemaphore :: proc "c" (
		semaphore: ^Semaphore,
		count: i32,
	) ---
}

// Condition ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

/**
 * A condition variable for signaling between threads.
 * It allows threads to wait for a condition to be signaled.
 */
ConditionVariable :: struct #align(8)  {
	buffer: [48]u8,
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Creates a condition variable.
     */
	CreateConditionVariable :: proc "c" () -> ConditionVariable ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Destroys a condition variable.
     */
	DestroyConditionVariable :: proc "c" (
		condvar: ^ConditionVariable,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Waits on a condition variable.
     * The calling thread will block until the condition variable is signaled.
     * The mutex must be locked before calling this function.
     */
	WaitConditionVariable :: proc "c" (
		condvar: ^ConditionVariable,
		mutex: ^Mutex,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Waits on a condition variable with a timeout.
     * The calling thread will block until the condition variable is signaled or the timeout expires.
     * The mutex must be locked before calling this function.
     * Returns true if the condition variable was signaled, false if the timeout expired.
     */
	WaitConditionVariableTimeout :: proc "c" (
		condvar: ^ConditionVariable,
		mutex: ^Mutex,
		timeoutNs: i32,
	) -> b8 ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Signals a condition variable, waking up one waiting thread.
     * If no threads are waiting, this has no effect.
     */
	SignalConditionVariable :: proc "c" (
		condvar: ^ConditionVariable,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Signals a condition variable, waking up all waiting threads.
     * If no threads are waiting, this has no effect.
     */
	BroadcastConditionVariable :: proc "c" (
		condvar: ^ConditionVariable,
	) ---
}

// #######################################################################################
// Memory
// #######################################################################################

@(link_prefix="PNSLR_")
foreign {
    /**
     * Set a block of memory to a specific value.
     */
	MemSet :: proc "c" (
		memory: rawptr,
		value: i32,
		size: i32,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Copy a block of memory from source to destination.
     */
	MemCopy :: proc "c" (
		destination: rawptr,
		source: rawptr,
		size: i32,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Copy a block of memory from source to destination, handling overlapping regions.
     */
	MemMove :: proc "c" (
		destination: rawptr,
		source: rawptr,
		size: i32,
	) ---
}

// #######################################################################################
// Allocators
// #######################################################################################

// Allocator ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

/**
 * Defines the mode to be used when calling the allocator function.
 */
AllocatorMode :: enum u8 {
	Allocate = 0,
	Resize = 1,
	Free = 2,
	FreeAll = 3,
	AllocateNoZero = 4,
	ResizeNoZero = 5,
	QueryCapabilities = 255,
}

/**
 * Defines the capabilities of an allocator.
 */
AllocatorCapability :: distinct bit_set[AllocatorCapabilityValues; u64]

AllocatorCapabilityValues :: enum u8 {
	ThreadSafe = 0,
	Resize = 1,
	Free = 2,
	FreeAll = 3,
	HintNil = 26,
	HintBump = 27,
	HintHeap = 28,
	HintTemp = 29,
	HintDebug = 30,
}

/**
 * Defines the error codes that can be returned by the allocator.
 */
AllocatorError :: enum u8 {
	None = 0,
	OutOfMemory = 1,
	InvalidAlignment = 2,
	InvalidSize = 3,
	InvalidMode = 4,
	Internal = 5,
	OutOfOrderFree = 6,
	DoubleFree = 7,
	CantFreeAll = 8,
}

/**
 * Defines the delegate type for the allocator function.
 */
AllocatorProcedure :: #type proc "c" (
	allocatorData: rawptr,
	mode: AllocatorMode,
	size: i32,
	alignment: i32,
	oldMemory: rawptr,
	oldSize: i32,
	location: SourceCodeLocation,
	error: ^AllocatorError,
) -> rawptr

/**
 * Defines a generic allocator structure that can be used to allocate, resize, and free memory.
 */
Allocator :: struct  {
	procedure: AllocatorProcedure,
	data: rawptr,
}

// declare []Allocator

// Allocation ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

@(link_prefix="PNSLR_")
foreign {
    /**
     * Allocate memory using the provided allocator.
     */
	Allocate :: proc "c" (
		allocator: Allocator,
		zeroed: b8,
		size: i32,
		alignment: i32,
		location: SourceCodeLocation,
		error: ^AllocatorError,
	) -> rawptr ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Resize memory using the provided allocator.
     */
	Resize :: proc "c" (
		allocator: Allocator,
		zeroed: b8,
		oldMemory: rawptr,
		oldSize: i32,
		newSize: i32,
		alignment: i32,
		location: SourceCodeLocation,
		error: ^AllocatorError,
	) -> rawptr ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Fallback resize function that can be used when the allocator does not support resizing.
     */
	DefaultResize :: proc "c" (
		allocator: Allocator,
		zeroed: b8,
		oldMemory: rawptr,
		oldSize: i32,
		newSize: i32,
		alignment: i32,
		location: SourceCodeLocation,
		error: ^AllocatorError,
	) -> rawptr ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Free memory using the provided allocator.
     */
	Free :: proc "c" (
		allocator: Allocator,
		memory: rawptr,
		location: SourceCodeLocation,
		error: ^AllocatorError,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Free all memory allocated by the provided allocator.
     */
	FreeAll :: proc "c" (
		allocator: Allocator,
		location: SourceCodeLocation,
		error: ^AllocatorError,
	) ---
}

@(link_prefix="PNSLR_")
foreign {
    /**
     * Query the capabilities of the provided allocator.
     */
	QueryAllocatorCapabilities :: proc "c" (
		allocator: Allocator,
		location: SourceCodeLocation,
		error: ^AllocatorError,
	) -> u64 ---
}

// Nil ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
